--- a/ETAW/src/main/webapp/css/login.css
+++ b/ETAW/src/main/webapp/css/login.css
@@ -45,8 +45,8 @@ input {
     position: absolute;
     top: 70%;
     right: 0;
-    color: rgb(200, 200, 200);
-    font-size: 1.7vh;
+    color: rgb(181, 181, 181);
+    font-size: 15px;
 }
 
 #passLogin {
@@ -101,18 +101,17 @@ h1 {
     margin: 0 0 1em;
     border: 1px solid #525252;
     padding: .7em 0;
-    background: rgba(255, 255, 255, 0.22);
+    background: rgba(255, 255, 255, 0.4);
     border-radius: 26px;
 }
 
 .input_c {
     outline: none;
     font-size: 15px;
-    color: #fff;
     border: none;
     width: 90%;
     display: inline-block;
-    background: transparent;
+    /*background: transparent;*/
     font-family: 'Muli', sans-serif;
     text-align: center;
     letter-spacing: 2px;
@@ -224,3 +223,18 @@ h1 {
     font-size: 20px;
     color: white;
 }
+
+::-webkit-input-placeholder { /* WebKit browsers */
+  color: #999;
+  font-size: 16px;
+}
+
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+  color: #999;
+  font-size: 16px;
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10+ */
+  color: #999;
+  font-size: 16px;
+}   
