--- a/ETAW/src/main/webapp/css/passage.css
+++ b/ETAW/src/main/webapp/css/passage.css
@@ -18,6 +18,7 @@ body {
     background: url("/img/passageBack.jpg") fixed;
     background-size: cover;
     z-index: 2;
+    overflow-y: hidden;
 }
 .page_back{
     position: absolute;
@@ -47,6 +48,8 @@ body {
     width: 100%;
     height: 85%;
     font-size: 1em;
+    overflow-y: scroll;
+    text-overflow: ellipsis;
 }
 #next_btn{
     position: absolute;
@@ -75,7 +78,7 @@ body {
 @keyframes rotation{
     0% {transform: rotateY(0);opacity: 1;}
     12.5% {transform: rotateY(90deg);opacity: 0;}
-    25% 75%{transform: rotateY(180deg);opacity: 0;}
+    25% ,75%{transform: rotateY(180deg);opacity: 0;}
     87.5% {transform: rotateY(270deg);opacity: 0;}
     100% {transform: rotateY(360deg);opacity: 1;}
 }
@@ -83,7 +86,8 @@ body {
 @keyframes Rotation{
     0% {transform: rotateY(0);opacity: 1;}
     12.5% {transform: rotateY(90deg);opacity: 1;}
-    25% 75%{transform: rotateY(180deg);opacity: 1;}
+    25% ,75%{transform: rotateY(180deg);opacity: 1;}
     87.5% {transform: rotateY(270deg);opacity: 1;}
     100% {transform: rotateY(360deg);opacity: 1;}
 }
+
