--- a/ETAW/src/main/webapp/css/passage.css
+++ b/ETAW/src/main/webapp/css/passage.css
@@ -7,65 +7,93 @@ body {
     margin: 0;
     width: 100%;
     height: 100%;
+    background: url("/img/page.jpg") fixed ;
+    background-size: cover;
 }
 
 .page_front{
     position: absolute;
-    top: 15%;
-    left: 28%;
-    width: 60%;
-    height: 70%;
-    background: url("/img/passageBack.jpg") fixed;
-    background-size: cover;
-    z-index: 2;
+    top: 8%;
+    left: 13.5%;
+    width: 85%;
+    height: 86%;
     overflow-y: hidden;
+    z-index: 1;
 }
 .page_back{
     position: absolute;
-    top: 15%;
+    top: 10%;
     left: 28%;
     width: 60%;
-    height: 70%;
-    background: url("/img/passageBack.jpg") fixed;
-    background-size: cover;
+    height: 80%;
 }
 #title_span{
     position: absolute;
     top: 2%;
     width: 100%;
+    font-family: 'American Typewriter', 'Rockwell Extra Bold', 'Book Antiqua', Georgia, serif;
     text-align: center;
-    font-size: 2em;
+    font-size: 3em;
+    color: #7a7a7a;
 }
 #author_span{
     position: absolute;
     top: 10%;
     right: 5%;
+    color: #527fe2;
     font-size: 1em;
+    font-weight: bold;
 }
 #content_span{
     position: absolute;
     top: 15%;
     width: 100%;
     height: 85%;
-    font-size: 1em;
+    text-indent: 3em;
+    letter-spacing: 0.4em;
+    font-size: 1.5em;
     overflow-y: scroll;
-    text-overflow: ellipsis;
+}
+#content_span::-webkit-scrollbar {
+    width: 10px;
+}
+#content_span::-webkit-scrollbar-track {
+    background-color: #acabcb;
+    -webkit-border-radius: 2em;
+    -moz-border-radius: 2em;
+    border-radius:2em;
+}
+#content_span::-webkit-scrollbar-thumb {
+    background-color: #fae6c0;
+    -webkit-border-radius: 2em;
+    -moz-border-radius: 2em;
+    border-radius:2em;
 }
 #next_btn{
     position: absolute;
-    top: 45%;
-    right: 8%;
+    top: 11%;
+    right: 7%;
     height: 30px;
     width: 30px;
     background-color:transparent;
+    z-index: 2;
+}
+#next_btn:hover{
+    height: 35px;
+    width: 35px;
 }
 #pre_btn{
     position: absolute;
-    top: 45%;
-    left: 24.5%;
+    top: 11%;
+    left: 15%;
     height: 30px;
     width: 30px;
     background-color:transparent;
+    z-index: 2;
+}
+#pre_btn:hover{
+    height: 35px;
+    width: 35px;
 }
 .pageBack_animation{
     animation: Rotation 1.5s linear;
