--- a/ETAW/src/main/webapp/css/findPassword.css
+++ b/ETAW/src/main/webapp/css/findPassword.css
@@ -38,7 +38,7 @@ h1 {
     top: 12%;
     left: 8%;
     font-size: 50px;
-    color: white;
+    color: #1d1d1d;
     padding: 0;
 }
 
@@ -52,7 +52,7 @@ h1 {
 .login-nav-right a {
     float: left;
     margin-left: 25px;
-    color: white;
+    color: #515151;
     font-size: 20px;
 }
 
