--- a/ETAW/src/main/webapp/css/login.css
+++ b/ETAW/src/main/webapp/css/login.css
@@ -1,13 +1,17 @@
 html {
     width: 100%;
     height: 100%;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #3d4d62;
+    top: 0;
+    left: 0;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
 }
 
 input:-webkit-autofill, textarea:-webkit-autofill, select:-webkit-autofill {
@@ -37,7 +41,7 @@ input {
     top: 12%;
     left: 8%;
     font-size: 50px;
-    color: white;
+    color: #4a4a4a;
     padding: 0;
 }
 
@@ -58,7 +62,7 @@ input {
 }
 
 a:hover {
-    color: rgba(180, 180, 180);
+    color: rgb(35, 35, 35);
     cursor: pointer;
 }
 
@@ -81,7 +85,7 @@ p {
 .login-nav-right a {
     float: left;
     margin-left: 25px;
-    color: white;
+    color: #626262;
     font-size: 20px;
 }
 
@@ -111,6 +115,7 @@ h1 {
     border: none;
     width: 90%;
     display: inline-block;
+    color: black;
     /*background: transparent;*/
     font-family: 'Muli', sans-serif;
     text-align: center;
@@ -196,7 +201,7 @@ h1 {
     position: absolute;
     right: 0;
     font-size: 15px;
-    color: #fff9ec;
+    color: #1d1d1d;
 }
 
 .div_main p {
@@ -221,7 +226,7 @@ h1 {
 
 .copyright p {
     font-size: 20px;
-    color: white;
+    color: #1d1d1d;
 }
 
 ::-webkit-input-placeholder { /* WebKit browsers */
@@ -237,4 +242,43 @@ h1 {
 :-ms-input-placeholder { /* Internet Explorer 10+ */
   color: #999;
   font-size: 16px;
-}   
+}
+.float_in {
+    animation: float_in_ani 1.5s forwards;
+}
+
+@keyframes float_in_ani {
+    from {
+        top: 100%;
+    }
+    to {
+        top: 30%;
+    }
+}
+.background{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+}
+.scale_Bg {
+    position: absolute;
+    animation: scale_ani 4s linear forwards;
+}
+
+@keyframes scale_ani{
+    from{
+        top: -5%;
+        left: -5%;
+        height: 110%;
+        width: 110%;
+    }
+    to{
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+    }
+}
