--- a/ETAW/src/main/webapp/css/login.css
+++ b/ETAW/src/main/webapp/css/login.css
@@ -37,7 +37,6 @@ input {
     top: 12%;
     left: 8%;
     font-size: 50px;
-    color: white;
     padding: 0;
 }
 
@@ -81,7 +80,7 @@ p {
 .login-nav-right a {
     float: left;
     margin-left: 25px;
-    color: white;
+    color: black;
     font-size: 20px;
 }
 
@@ -221,7 +220,6 @@ h1 {
 
 .copyright p {
     font-size: 20px;
-    color: white;
 }
 
 ::-webkit-input-placeholder { /* WebKit browsers */
