--- a/ETAW/src/main/webapp/plugins/layui/css/layui.css
+++ b/ETAW/src/main/webapp/plugins/layui/css/layui.css
@@ -1733,7 +1733,7 @@ a cite {
     height: 6px;
     border-radius: 20px;
     text-align: right;
-    background-color: #5FB878;
+    background-color: skyblue;
     transition: all .3s;
     -webkit-transition: all .3s
 }
@@ -2066,7 +2066,7 @@ hr {
 }
 
 .layui-btn-checked {
-    background-color: #5FB878
+    background-color: skyblue;
 }
 
 .layui-btn-disabled,
@@ -2351,7 +2351,7 @@ hr {
 }
 
 .layui-form-select dl dd.layui-this {
-    background-color: #5FB878;
+    background-color: skyblue;
     color: #fff
 }
 
@@ -2449,12 +2449,12 @@ hr {
 
 .layui-form-checked,
 .layui-form-checked:hover {
-    border-color: #5FB878
+    border-color: skyblue;
 }
 
 .layui-form-checked span,
 .layui-form-checked:hover span {
-    background-color: #5FB878
+    background-color: skyblue;
 }
 
 .layui-form-checked i,
@@ -2623,7 +2623,7 @@ hr {
 
 .layui-form-radio > i:hover,
 .layui-form-radioed > i {
-    color: #5FB878
+    color: skyblue;
 }
 
 .layui-radio-disbaled > i {
@@ -3857,7 +3857,7 @@ body .layui-table-tips .layui-layer-content {
     top: 0;
     width: 0;
     height: 5px;
-    background-color: #5FB878;
+    background-color: skyblue;
     transition: all .2s;
     -webkit-transition: all .2s
 }
@@ -3941,7 +3941,7 @@ body .layui-table-tips .layui-layer-content {
 
 .layui-nav .layui-nav-child dd.layui-this a,
 .layui-nav-child dd.layui-this {
-    background-color: #5FB878;
+    background-color: skyblue;
     color: #fff
 }
 
@@ -3976,7 +3976,7 @@ body .layui-table-tips .layui-layer-content {
 .layui-nav-tree .layui-nav-bar {
     width: 5px;
     height: 0;
-    background-color: #009688
+    background-color:skyblue;
 }
 
 .layui-nav-tree .layui-nav-child dd.layui-this,
@@ -4295,7 +4295,7 @@ body .layui-table-tips .layui-layer-content {
     height: 20px;
     line-height: 20px;
     background-color: #fff;
-    color: #5FB878;
+    color: skyblue;
     border-radius: 50%;
     text-align: center;
     cursor: pointer
