--- a/ETAW/src/main/webapp/plugins/layui/css/layui.css
+++ b/ETAW/src/main/webapp/plugins/layui/css/layui.css
@@ -1891,7 +1891,7 @@ a cite {
 }
 
 .layui-bg-green {
-    background-color: #009688 !important
+    background-color: skyblue !important
 }
 
 .layui-bg-cyan {
@@ -3009,7 +3009,7 @@ hr {
 
 .layui-laypage input:focus,
 .layui-laypage select:focus {
-    border-color: #009688 !important
+    border-color: skyblue !important
 }
 
 .layui-laypage button {
@@ -3678,11 +3678,11 @@ body .layui-table-tips .layui-layer-content {
 
 .layui-upload-drag .layui-icon {
     font-size: 50px;
-    color: #009688
+    color: skyblue;
 }
 
 .layui-upload-drag[lay-over] {
-    border-color: #009688
+    border-color: skyblue;
 }
 
 .layui-upload-iframe {
@@ -3984,7 +3984,7 @@ body .layui-table-tips .layui-layer-content {
 .layui-nav-tree .layui-this,
 .layui-nav-tree .layui-this > a,
 .layui-nav-tree .layui-this > a:hover {
-    background-color: #009688;
+    background-color: skyblue;
     color: #fff
 }
 
